--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="images/ico/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+    
+    <meta property="og:title" content="CV web">
+    <meta property="og:description" content="">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
 
     <link href="css/style.css" rel="stylesheet">
 </head>
