--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                
                 <div class="header-text">
                     <h1 id="typing"></h1>
-                    <p>- By someone who want to be a Fornt-end designer / Web designer / UI & UX designer</p>
+<!--                     <p>- By someone who want to be a Fornt-end designer / Web designer / UI & UX designer</p> -->
                 </div>
             </div>
             <div class="one-third col">
