--- a/index_tw.html
+++ b/index_tw.html
@@ -67,7 +67,7 @@
               
                 <div class="header-text">
                     <h1 id="typing"></h1>
-                    <p>- 一位想成為 前端工程師 / 網頁設計師 / UI & UX 設計師 的人說</p>
+<!--                     <p>- 一位想成為 前端工程師 / 網頁設計師 / UI & UX 設計師 的人說</p> -->
                 </div>
             </div>
             <div class="one-third col">
